// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/pypi/index getReleases fall back from json and process data from simple endpoint 1`] = `
Object {
  "registryUrl": "https://custom.pypi.net/foo",
  "releases": Array [
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.1.3",
    },
    Object {
      "version": "0.1.4",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.4.0",
    },
    Object {
      "version": "0.4.1",
    },
    Object {
      "version": "0.4.2",
    },
    Object {
      "isDeprecated": true,
      "version": "0.5.0",
    },
  ],
}
`;

exports[`datasource/pypi/index getReleases fall back from json and process data from simple endpoint 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "custom.pypi.net",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.pypi.net/foo/dj-database-url/json",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "custom.pypi.net",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.pypi.net/foo/dj-database-url/",
  },
]
`;

exports[`datasource/pypi/index getReleases find url from project_urls 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/flexget/json",
  },
]
`;

exports[`datasource/pypi/index getReleases parses data-requires-python and respects constraints from simple endpoint 1`] = `
Object {
  "registryUrl": "https://pypi.org/simple/",
  "releases": Array [
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.1.3",
    },
    Object {
      "version": "0.1.4",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
  ],
}
`;

exports[`datasource/pypi/index getReleases parses data-requires-python and respects constraints from simple endpoint 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/simple/dj-database-url/",
  },
]
`;

exports[`datasource/pypi/index getReleases process data from +simple endpoint 1`] = `
Object {
  "registryUrl": "https://some.registry.org/+simple/",
  "releases": Array [
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.1.3",
    },
    Object {
      "version": "0.1.4",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.4.0",
    },
    Object {
      "version": "0.4.1",
    },
    Object {
      "version": "0.4.2",
    },
    Object {
      "isDeprecated": true,
      "version": "0.5.0",
    },
  ],
}
`;

exports[`datasource/pypi/index getReleases process data from +simple endpoint 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "some.registry.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://some.registry.org/+simple/dj-database-url/",
  },
]
`;

exports[`datasource/pypi/index getReleases process data from simple endpoint 1`] = `
Object {
  "registryUrl": "https://pypi.org/simple/",
  "releases": Array [
    Object {
      "version": "0.1.2",
    },
    Object {
      "version": "0.1.3",
    },
    Object {
      "version": "0.1.4",
    },
    Object {
      "version": "0.2.0",
    },
    Object {
      "version": "0.2.1",
    },
    Object {
      "version": "0.2.2",
    },
    Object {
      "version": "0.3.0",
    },
    Object {
      "version": "0.4.0",
    },
    Object {
      "version": "0.4.1",
    },
    Object {
      "version": "0.4.2",
    },
    Object {
      "isDeprecated": true,
      "version": "0.5.0",
    },
  ],
}
`;

exports[`datasource/pypi/index getReleases process data from simple endpoint 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/simple/dj-database-url/",
  },
]
`;

exports[`datasource/pypi/index getReleases process data from simple endpoint with hyphens replaced with underscores 1`] = `
Object {
  "registryUrl": "https://pypi.org/simple/",
  "releases": Array [
    Object {
      "version": "0.0.5",
    },
  ],
}
`;

exports[`datasource/pypi/index getReleases process data from simple endpoint with hyphens replaced with underscores 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/simple/image-collector/",
  },
]
`;

exports[`datasource/pypi/index getReleases processes real data 1`] = `
Object {
  "registryUrl": "https://pypi.org/pypi/",
  "releases": Array [
    Object {
      "releaseTimestamp": "2017-04-03T16:55:14.000Z",
      "version": "0.0.1",
    },
    Object {
      "releaseTimestamp": "2017-04-17T20:32:30.000Z",
      "version": "0.0.2",
    },
    Object {
      "releaseTimestamp": "2017-04-28T21:18:54.000Z",
      "version": "0.0.3",
    },
    Object {
      "releaseTimestamp": "2017-05-09T21:36:51.000Z",
      "version": "0.0.4",
    },
    Object {
      "releaseTimestamp": "2017-05-30T23:13:49.000Z",
      "version": "0.0.5",
    },
    Object {
      "releaseTimestamp": "2017-06-13T22:21:05.000Z",
      "version": "0.0.6",
    },
    Object {
      "releaseTimestamp": "2017-06-21T22:12:36.000Z",
      "version": "0.0.7",
    },
    Object {
      "releaseTimestamp": "2017-07-07T16:22:26.000Z",
      "version": "0.0.8",
    },
    Object {
      "releaseTimestamp": "2017-08-28T20:14:33.000Z",
      "version": "0.0.9",
    },
    Object {
      "releaseTimestamp": "2017-09-22T23:47:59.000Z",
      "version": "0.0.10",
    },
    Object {
      "releaseTimestamp": "2017-10-24T02:14:07.000Z",
      "version": "0.0.11",
    },
    Object {
      "releaseTimestamp": "2017-11-14T18:31:57.000Z",
      "version": "0.0.12",
    },
    Object {
      "releaseTimestamp": "2017-12-05T18:57:54.000Z",
      "version": "0.0.13",
    },
    Object {
      "releaseTimestamp": "2018-01-05T21:26:03.000Z",
      "version": "0.0.14",
    },
    Object {
      "releaseTimestamp": "2018-01-17T18:36:39.000Z",
      "version": "0.1.0",
    },
    Object {
      "releaseTimestamp": "2018-01-31T18:05:22.000Z",
      "version": "0.1.1",
    },
    Object {
      "releaseTimestamp": "2018-02-13T18:17:52.000Z",
      "version": "0.1.2",
    },
    Object {
      "releaseTimestamp": "2018-03-13T17:08:20.000Z",
      "version": "0.1.3",
    },
    Object {
      "releaseTimestamp": "2018-03-27T17:55:25.000Z",
      "version": "0.1.4",
    },
    Object {
      "releaseTimestamp": "2018-04-10T17:25:47.000Z",
      "version": "0.1.5",
    },
    Object {
      "isDeprecated": true,
      "releaseTimestamp": "2018-05-07T17:59:09.000Z",
      "version": "0.1.6",
    },
    Object {
      "releaseTimestamp": "2018-05-22T17:25:23.000Z",
      "version": "0.1.7",
    },
  ],
  "sourceUrl": "https://github.com/Azure/azure-cli",
}
`;

exports[`datasource/pypi/index getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/azure-cli-monitor/json",
  },
]
`;

exports[`datasource/pypi/index getReleases respects constraints 1`] = `
Object {
  "registryUrl": "https://pypi.org/pypi/",
  "releases": Array [
    Object {
      "version": "0.4.0",
    },
    Object {
      "version": "0.4.1",
    },
    Object {
      "version": "0.30.3",
    },
    Object {
      "version": "0.31.0",
    },
  ],
}
`;

exports[`datasource/pypi/index getReleases respects constraints 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/doit/json",
  },
]
`;

exports[`datasource/pypi/index getReleases returns non-github home_page 1`] = `"https://microsoft.com"`;

exports[`datasource/pypi/index getReleases returns non-github home_page 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/something/json",
  },
]
`;

exports[`datasource/pypi/index getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/something/json",
  },
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/something/",
  },
]
`;

exports[`datasource/pypi/index getReleases returns null for 404 response from simple endpoint 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/simple/dj-database-url/",
  },
]
`;

exports[`datasource/pypi/index getReleases returns null for empty response 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/simple/dj-database-url/",
  },
]
`;

exports[`datasource/pypi/index getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/something/json",
  },
]
`;

exports[`datasource/pypi/index getReleases returns null if mismatched name 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "pypi.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://pypi.org/pypi/something/json",
  },
]
`;

exports[`datasource/pypi/index getReleases supports custom datasource url 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "custom.pypi.net",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.pypi.net/foo/azure-cli-monitor/json",
  },
]
`;

exports[`datasource/pypi/index getReleases supports multiple custom datasource urls 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "custom.pypi.net",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://custom.pypi.net/foo/azure-cli-monitor/json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "second-index",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://second-index/foo/azure-cli-monitor/json",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "third-index",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://third-index/foo/azure-cli-monitor/json",
  },
]
`;
